# varnish-libvmod-crypto

./: .gitignore  README.rst  bootstrap  configure.ac
src/: Makefile.am  flint.lnt  md.c  md.h  tbl_md.h  vmod_crypto.c  vmod_crypto.md  vmod_crypto.rst  vmod_crypto.vcc
src/vtc/: cf.vtc  jwt.vtc  vmod_crypto.tpl  vmod_crypto.vtc
src/vtc/data/: Makefile.am  gen.sh
src/vtc/keys/: DSA_1024.param.pem  DSA_1024.pem  DSA_1024.pub.pem  DSA_2048.param.pem  DSA_2048.pem  DSA_2048.pub.pem  DSA_512.param.pem  DSA_512.pem  DSA_512.pub.pem  RSA_1024.pem  RSA_1024.pub.pem  RSA_15360.pem  RSA_15360.pub.pem  RSA_2048.pem  RSA_2048.pub.pem  RSA_3072.pem  RSA_3072.pub.pem  RSA_4096.pem  RSA_4096.pub.pem  RSA_7680.pem  RSA_7680.pub.pem  gen.sh
src/vtc/sigs/: DSA_1024_sha1_11.sig  DSA_1024_sha1_11_5.sig  DSA_1024_sha1_1283.sig  DSA_1024_sha1_1283_641.sig  DSA_1024_sha1_2003.sig  DSA_1024_sha1_2003_1001.sig  DSA_1024_sha1_2048.sig  DSA_1024_sha1_2048_1024.sig  DSA_1024_sha1_241.sig  DSA_1024_sha1_241_120.sig  DSA_1024_sha1_512.sig  DSA_1024_sha1_512_256.sig  DSA_1024_sha1_617.sig  DSA_1024_sha1_617_308.sig  DSA_1024_sha1_7919.sig  DSA_1024_sha1_7919_3959.sig  DSA_1024_sha1_8192.sig  DSA_1024_sha1_8192_4096.sig  DSA_1024_sha1_83.sig  DSA_1024_sha1_83_41.sig  DSA_1024_sha224_11.sig  DSA_1024_sha224_11_5.sig  DSA_1024_sha224_1283.sig  DSA_1024_sha224_1283_641.sig  DSA_1024_sha224_2003.sig  DSA_1024_sha224_2003_1001.sig  DSA_1024_sha224_2048.sig  DSA_1024_sha224_2048_1024.sig  DSA_1024_sha224_241.sig  DSA_1024_sha224_241_120.sig  DSA_1024_sha224_512.sig  DSA_1024_sha224_512_256.sig  DSA_1024_sha224_617.sig  DSA_1024_sha224_617_308.sig  DSA_1024_sha224_7919.sig  DSA_1024_sha224_7919_3959.sig  DSA_1024_sha224_8192.sig  DSA_1024_sha224_8192_4096.sig  DSA_1024_sha224_83.sig  DSA_1024_sha224_83_41.sig  (+1341 more)
