AM_CFLAGS = $(VARNISHAPI_CFLAGS)

# Modules

vmod_LTLIBRARIES = \
	libvmod_crypto.la

libvmod_crypto_la_LDFLAGS = $(VMOD_LDFLAGS) -lcrypto
libvmod_crypto_la_SOURCES = \
	vmod_crypto.c \
	md.c \
	md.h \
	tbl_md.h
nodist_libvmod_crypto_la_SOURCES = \
	vcc_crypto_if.c \
	vcc_crypto_if.h

@BUILD_VMOD_CRYPTO@

# Test suite

AM_TESTS_ENVIRONMENT = \
	PATH="$(abs_builddir):$(VARNISH_TEST_PATH):$(PATH)" \
	LD_LIBRARY_PATH="$(VARNISH_LIBRARY_PATH)"
TEST_EXTENSIONS = .vtc
VTC_LOG_COMPILER = varnishtest -v
AM_VTC_LOG_FLAGS = \
	-b 10m \
	-D vtc_dir="$(abs_top_srcdir)/src/vtc" \
	-p vcl_path="$(abs_top_srcdir)/vcl" \
	-p vmod_path="$(abs_builddir)/.libs:$(vmoddir)"

# Documentation

dist_doc_DATA = \
	vmod_crypto.vcc \
	$(TESTS)

dist_man_MANS = \
	vmod_crypto.3

SUBDIRS = \
	vtc/data	\
	vtc/sigs

.rst.1:
	$(AM_V_GEN) $(RST2MAN) $< $@

BUILT_TESTS =				\
	vtc/DSA_1024_sha1_11.vtc	\
	vtc/DSA_1024_sha1_1283.vtc	\
	vtc/DSA_1024_sha1_2003.vtc	\
	vtc/DSA_1024_sha1_2048.vtc	\
	vtc/DSA_1024_sha1_241.vtc	\
	vtc/DSA_1024_sha1_512.vtc	\
	vtc/DSA_1024_sha1_617.vtc	\
	vtc/DSA_1024_sha1_7919.vtc	\
	vtc/DSA_1024_sha1_8192.vtc	\
	vtc/DSA_1024_sha1_83.vtc	\
	vtc/DSA_1024_sha224_11.vtc	\
	vtc/DSA_1024_sha224_1283.vtc	\
	vtc/DSA_1024_sha224_2003.vtc	\
	vtc/DSA_1024_sha224_2048.vtc	\
	vtc/DSA_1024_sha224_241.vtc	\
	vtc/DSA_1024_sha224_512.vtc	\
	vtc/DSA_1024_sha224_617.vtc	\
	vtc/DSA_1024_sha224_7919.vtc	\
	vtc/DSA_1024_sha224_8192.vtc	\
	vtc/DSA_1024_sha224_83.vtc	\
	vtc/DSA_1024_sha256_11.vtc	\
	vtc/DSA_1024_sha256_1283.vtc	\
	vtc/DSA_1024_sha256_2003.vtc	\
	vtc/DSA_1024_sha256_2048.vtc	\
	vtc/DSA_1024_sha256_241.vtc	\
	vtc/DSA_1024_sha256_512.vtc	\
	vtc/DSA_1024_sha256_617.vtc	\
	vtc/DSA_1024_sha256_7919.vtc	\
	vtc/DSA_1024_sha256_8192.vtc	\
	vtc/DSA_1024_sha256_83.vtc	\
	vtc/DSA_1024_sha384_11.vtc	\
	vtc/DSA_1024_sha384_1283.vtc	\
	vtc/DSA_1024_sha384_2003.vtc	\
	vtc/DSA_1024_sha384_2048.vtc	\
	vtc/DSA_1024_sha384_241.vtc	\
	vtc/DSA_1024_sha384_512.vtc	\
	vtc/DSA_1024_sha384_617.vtc	\
	vtc/DSA_1024_sha384_7919.vtc	\
	vtc/DSA_1024_sha384_8192.vtc	\
	vtc/DSA_1024_sha384_83.vtc	\
	vtc/DSA_1024_sha512_11.vtc	\
	vtc/DSA_1024_sha512_1283.vtc	\
	vtc/DSA_1024_sha512_2003.vtc	\
	vtc/DSA_1024_sha512_2048.vtc	\
	vtc/DSA_1024_sha512_241.vtc	\
	vtc/DSA_1024_sha512_512.vtc	\
	vtc/DSA_1024_sha512_617.vtc	\
	vtc/DSA_1024_sha512_7919.vtc	\
	vtc/DSA_1024_sha512_8192.vtc	\
	vtc/DSA_1024_sha512_83.vtc	\
	vtc/DSA_2048_sha1_11.vtc	\
	vtc/DSA_2048_sha1_1283.vtc	\
	vtc/DSA_2048_sha1_2003.vtc	\
	vtc/DSA_2048_sha1_2048.vtc	\
	vtc/DSA_2048_sha1_241.vtc	\
	vtc/DSA_2048_sha1_512.vtc	\
	vtc/DSA_2048_sha1_617.vtc	\
	vtc/DSA_2048_sha1_7919.vtc	\
	vtc/DSA_2048_sha1_8192.vtc	\
	vtc/DSA_2048_sha1_83.vtc	\
	vtc/DSA_2048_sha224_11.vtc	\
	vtc/DSA_2048_sha224_1283.vtc	\
	vtc/DSA_2048_sha224_2003.vtc	\
	vtc/DSA_2048_sha224_2048.vtc	\
	vtc/DSA_2048_sha224_241.vtc	\
	vtc/DSA_2048_sha224_512.vtc	\
	vtc/DSA_2048_sha224_617.vtc	\
	vtc/DSA_2048_sha224_7919.vtc	\
	vtc/DSA_2048_sha224_8192.vtc	\
	vtc/DSA_2048_sha224_83.vtc	\
	vtc/DSA_2048_sha256_11.vtc	\
	vtc/DSA_2048_sha256_1283.vtc	\
	vtc/DSA_2048_sha256_2003.vtc	\
	vtc/DSA_2048_sha256_2048.vtc	\
	vtc/DSA_2048_sha256_241.vtc	\
	vtc/DSA_2048_sha256_512.vtc	\
	vtc/DSA_2048_sha256_617.vtc	\
	vtc/DSA_2048_sha256_7919.vtc	\
	vtc/DSA_2048_sha256_8192.vtc	\
	vtc/DSA_2048_sha256_83.vtc	\
	vtc/DSA_2048_sha384_11.vtc	\
	vtc/DSA_2048_sha384_1283.vtc	\
	vtc/DSA_2048_sha384_2003.vtc	\
	vtc/DSA_2048_sha384_2048.vtc	\
	vtc/DSA_2048_sha384_241.vtc	\
	vtc/DSA_2048_sha384_512.vtc	\
	vtc/DSA_2048_sha384_617.vtc	\
	vtc/DSA_2048_sha384_7919.vtc	\
	vtc/DSA_2048_sha384_8192.vtc	\
	vtc/DSA_2048_sha384_83.vtc	\
	vtc/DSA_2048_sha512_11.vtc	\
	vtc/DSA_2048_sha512_1283.vtc	\
	vtc/DSA_2048_sha512_2003.vtc	\
	vtc/DSA_2048_sha512_2048.vtc	\
	vtc/DSA_2048_sha512_241.vtc	\
	vtc/DSA_2048_sha512_512.vtc	\
	vtc/DSA_2048_sha512_617.vtc	\
	vtc/DSA_2048_sha512_7919.vtc	\
	vtc/DSA_2048_sha512_8192.vtc	\
	vtc/DSA_2048_sha512_83.vtc	\
	vtc/DSA_512_sha1_11.vtc	\
	vtc/DSA_512_sha1_1283.vtc	\
	vtc/DSA_512_sha1_2003.vtc	\
	vtc/DSA_512_sha1_2048.vtc	\
	vtc/DSA_512_sha1_241.vtc	\
	vtc/DSA_512_sha1_512.vtc	\
	vtc/DSA_512_sha1_617.vtc	\
	vtc/DSA_512_sha1_7919.vtc	\
	vtc/DSA_512_sha1_8192.vtc	\
	vtc/DSA_512_sha1_83.vtc	\
	vtc/DSA_512_sha224_11.vtc	\
	vtc/DSA_512_sha224_1283.vtc	\
	vtc/DSA_512_sha224_2003.vtc	\
	vtc/DSA_512_sha224_2048.vtc	\
	vtc/DSA_512_sha224_241.vtc	\
	vtc/DSA_512_sha224_512.vtc	\
	vtc/DSA_512_sha224_617.vtc	\
	vtc/DSA_512_sha224_7919.vtc	\
	vtc/DSA_512_sha224_8192.vtc	\
	vtc/DSA_512_sha224_83.vtc	\
	vtc/DSA_512_sha256_11.vtc	\
	vtc/DSA_512_sha256_1283.vtc	\
	vtc/DSA_512_sha256_2003.vtc	\
	vtc/DSA_512_sha256_2048.vtc	\
	vtc/DSA_512_sha256_241.vtc	\
	vtc/DSA_512_sha256_512.vtc	\
	vtc/DSA_512_sha256_617.vtc	\
	vtc/DSA_512_sha256_7919.vtc	\
	vtc/DSA_512_sha256_8192.vtc	\
	vtc/DSA_512_sha256_83.vtc	\
	vtc/DSA_512_sha384_11.vtc	\
	vtc/DSA_512_sha384_1283.vtc	\
	vtc/DSA_512_sha384_2003.vtc	\
	vtc/DSA_512_sha384_2048.vtc	\
	vtc/DSA_512_sha384_241.vtc	\
	vtc/DSA_512_sha384_512.vtc	\
	vtc/DSA_512_sha384_617.vtc	\
	vtc/DSA_512_sha384_7919.vtc	\
	vtc/DSA_512_sha384_8192.vtc	\
	vtc/DSA_512_sha384_83.vtc	\
	vtc/DSA_512_sha512_11.vtc	\
	vtc/DSA_512_sha512_1283.vtc	\
	vtc/DSA_512_sha512_2003.vtc	\
	vtc/DSA_512_sha512_2048.vtc	\
	vtc/DSA_512_sha512_241.vtc	\
	vtc/DSA_512_sha512_512.vtc	\
	vtc/DSA_512_sha512_617.vtc	\
	vtc/DSA_512_sha512_7919.vtc	\
	vtc/DSA_512_sha512_8192.vtc	\
	vtc/DSA_512_sha512_83.vtc	\
	vtc/RSA_1024_md4_11.vtc	\
	vtc/RSA_1024_md4_1283.vtc	\
	vtc/RSA_1024_md4_2003.vtc	\
	vtc/RSA_1024_md4_2048.vtc	\
	vtc/RSA_1024_md4_241.vtc	\
	vtc/RSA_1024_md4_512.vtc	\
	vtc/RSA_1024_md4_617.vtc	\
	vtc/RSA_1024_md4_7919.vtc	\
	vtc/RSA_1024_md4_8192.vtc	\
	vtc/RSA_1024_md4_83.vtc	\
	vtc/RSA_1024_md5_11.vtc	\
	vtc/RSA_1024_md5_1283.vtc	\
	vtc/RSA_1024_md5_2003.vtc	\
	vtc/RSA_1024_md5_2048.vtc	\
	vtc/RSA_1024_md5_241.vtc	\
	vtc/RSA_1024_md5_512.vtc	\
	vtc/RSA_1024_md5_617.vtc	\
	vtc/RSA_1024_md5_7919.vtc	\
	vtc/RSA_1024_md5_8192.vtc	\
	vtc/RSA_1024_md5_83.vtc	\
	vtc/RSA_1024_rmd160_11.vtc	\
	vtc/RSA_1024_rmd160_1283.vtc	\
	vtc/RSA_1024_rmd160_2003.vtc	\
	vtc/RSA_1024_rmd160_2048.vtc	\
	vtc/RSA_1024_rmd160_241.vtc	\
	vtc/RSA_1024_rmd160_512.vtc	\
	vtc/RSA_1024_rmd160_617.vtc	\
	vtc/RSA_1024_rmd160_7919.vtc	\
	vtc/RSA_1024_rmd160_8192.vtc	\
	vtc/RSA_1024_rmd160_83.vtc	\
	vtc/RSA_1024_sha1_11.vtc	\
	vtc/RSA_1024_sha1_1283.vtc	\
	vtc/RSA_1024_sha1_2003.vtc	\
	vtc/RSA_1024_sha1_2048.vtc	\
	vtc/RSA_1024_sha1_241.vtc	\
	vtc/RSA_1024_sha1_512.vtc	\
	vtc/RSA_1024_sha1_617.vtc	\
	vtc/RSA_1024_sha1_7919.vtc	\
	vtc/RSA_1024_sha1_8192.vtc	\
	vtc/RSA_1024_sha1_83.vtc	\
	vtc/RSA_1024_sha224_11.vtc	\
	vtc/RSA_1024_sha224_1283.vtc	\
	vtc/RSA_1024_sha224_2003.vtc	\
	vtc/RSA_1024_sha224_2048.vtc	\
	vtc/RSA_1024_sha224_241.vtc	\
	vtc/RSA_1024_sha224_512.vtc	\
	vtc/RSA_1024_sha224_617.vtc	\
	vtc/RSA_1024_sha224_7919.vtc	\
	vtc/RSA_1024_sha224_8192.vtc	\
	vtc/RSA_1024_sha224_83.vtc	\
	vtc/RSA_1024_sha256_11.vtc	\
	vtc/RSA_1024_sha256_1283.vtc	\
	vtc/RSA_1024_sha256_2003.vtc	\
	vtc/RSA_1024_sha256_2048.vtc	\
	vtc/RSA_1024_sha256_241.vtc	\
	vtc/RSA_1024_sha256_512.vtc	\
	vtc/RSA_1024_sha256_617.vtc	\
	vtc/RSA_1024_sha256_7919.vtc	\
	vtc/RSA_1024_sha256_8192.vtc	\
	vtc/RSA_1024_sha256_83.vtc	\
	vtc/RSA_1024_sha384_11.vtc	\
	vtc/RSA_1024_sha384_1283.vtc	\
	vtc/RSA_1024_sha384_2003.vtc	\
	vtc/RSA_1024_sha384_2048.vtc	\
	vtc/RSA_1024_sha384_241.vtc	\
	vtc/RSA_1024_sha384_512.vtc	\
	vtc/RSA_1024_sha384_617.vtc	\
	vtc/RSA_1024_sha384_7919.vtc	\
	vtc/RSA_1024_sha384_8192.vtc	\
	vtc/RSA_1024_sha384_83.vtc	\
	vtc/RSA_1024_sha512_11.vtc	\
	vtc/RSA_1024_sha512_1283.vtc	\
	vtc/RSA_1024_sha512_2003.vtc	\
	vtc/RSA_1024_sha512_2048.vtc	\
	vtc/RSA_1024_sha512_241.vtc	\
	vtc/RSA_1024_sha512_512.vtc	\
	vtc/RSA_1024_sha512_617.vtc	\
	vtc/RSA_1024_sha512_7919.vtc	\
	vtc/RSA_1024_sha512_8192.vtc	\
	vtc/RSA_1024_sha512_83.vtc	\
	vtc/RSA_15360_md4_11.vtc	\
	vtc/RSA_15360_md4_1283.vtc	\
	vtc/RSA_15360_md4_2003.vtc	\
	vtc/RSA_15360_md4_2048.vtc	\
	vtc/RSA_15360_md4_241.vtc	\
	vtc/RSA_15360_md4_512.vtc	\
	vtc/RSA_15360_md4_617.vtc	\
	vtc/RSA_15360_md4_7919.vtc	\
	vtc/RSA_15360_md4_8192.vtc	\
	vtc/RSA_15360_md4_83.vtc	\
	vtc/RSA_15360_md5_11.vtc	\
	vtc/RSA_15360_md5_1283.vtc	\
	vtc/RSA_15360_md5_2003.vtc	\
	vtc/RSA_15360_md5_2048.vtc	\
	vtc/RSA_15360_md5_241.vtc	\
	vtc/RSA_15360_md5_512.vtc	\
	vtc/RSA_15360_md5_617.vtc	\
	vtc/RSA_15360_md5_7919.vtc	\
	vtc/RSA_15360_md5_8192.vtc	\
	vtc/RSA_15360_md5_83.vtc	\
	vtc/RSA_15360_rmd160_11.vtc	\
	vtc/RSA_15360_rmd160_1283.vtc	\
	vtc/RSA_15360_rmd160_2003.vtc	\
	vtc/RSA_15360_rmd160_2048.vtc	\
	vtc/RSA_15360_rmd160_241.vtc	\
	vtc/RSA_15360_rmd160_512.vtc	\
	vtc/RSA_15360_rmd160_617.vtc	\
	vtc/RSA_15360_rmd160_7919.vtc	\
	vtc/RSA_15360_rmd160_8192.vtc	\
	vtc/RSA_15360_rmd160_83.vtc	\
	vtc/RSA_15360_sha1_11.vtc	\
	vtc/RSA_15360_sha1_1283.vtc	\
	vtc/RSA_15360_sha1_2003.vtc	\
	vtc/RSA_15360_sha1_2048.vtc	\
	vtc/RSA_15360_sha1_241.vtc	\
	vtc/RSA_15360_sha1_512.vtc	\
	vtc/RSA_15360_sha1_617.vtc	\
	vtc/RSA_15360_sha1_7919.vtc	\
	vtc/RSA_15360_sha1_8192.vtc	\
	vtc/RSA_15360_sha1_83.vtc	\
	vtc/RSA_15360_sha224_11.vtc	\
	vtc/RSA_15360_sha224_1283.vtc	\
	vtc/RSA_15360_sha224_2003.vtc	\
	vtc/RSA_15360_sha224_2048.vtc	\
	vtc/RSA_15360_sha224_241.vtc	\
	vtc/RSA_15360_sha224_512.vtc	\
	vtc/RSA_15360_sha224_617.vtc	\
	vtc/RSA_15360_sha224_7919.vtc	\
	vtc/RSA_15360_sha224_8192.vtc	\
	vtc/RSA_15360_sha224_83.vtc	\
	vtc/RSA_15360_sha256_11.vtc	\
	vtc/RSA_15360_sha256_1283.vtc	\
	vtc/RSA_15360_sha256_2003.vtc	\
	vtc/RSA_15360_sha256_2048.vtc	\
	vtc/RSA_15360_sha256_241.vtc	\
	vtc/RSA_15360_sha256_512.vtc	\
	vtc/RSA_15360_sha256_617.vtc	\
	vtc/RSA_15360_sha256_7919.vtc	\
	vtc/RSA_15360_sha256_8192.vtc	\
	vtc/RSA_15360_sha256_83.vtc	\
	vtc/RSA_15360_sha384_11.vtc	\
	vtc/RSA_15360_sha384_1283.vtc	\
	vtc/RSA_15360_sha384_2003.vtc	\
	vtc/RSA_15360_sha384_2048.vtc	\
	vtc/RSA_15360_sha384_241.vtc	\
	vtc/RSA_15360_sha384_512.vtc	\
	vtc/RSA_15360_sha384_617.vtc	\
	vtc/RSA_15360_sha384_7919.vtc	\
	vtc/RSA_15360_sha384_8192.vtc	\
	vtc/RSA_15360_sha384_83.vtc	\
	vtc/RSA_15360_sha512_11.vtc	\
	vtc/RSA_15360_sha512_1283.vtc	\
	vtc/RSA_15360_sha512_2003.vtc	\
	vtc/RSA_15360_sha512_2048.vtc	\
	vtc/RSA_15360_sha512_241.vtc	\
	vtc/RSA_15360_sha512_512.vtc	\
	vtc/RSA_15360_sha512_617.vtc	\
	vtc/RSA_15360_sha512_7919.vtc	\
	vtc/RSA_15360_sha512_8192.vtc	\
	vtc/RSA_15360_sha512_83.vtc	\
	vtc/RSA_2048_md4_11.vtc	\
	vtc/RSA_2048_md4_1283.vtc	\
	vtc/RSA_2048_md4_2003.vtc	\
	vtc/RSA_2048_md4_2048.vtc	\
	vtc/RSA_2048_md4_241.vtc	\
	vtc/RSA_2048_md4_512.vtc	\
	vtc/RSA_2048_md4_617.vtc	\
	vtc/RSA_2048_md4_7919.vtc	\
	vtc/RSA_2048_md4_8192.vtc	\
	vtc/RSA_2048_md4_83.vtc	\
	vtc/RSA_2048_md5_11.vtc	\
	vtc/RSA_2048_md5_1283.vtc	\
	vtc/RSA_2048_md5_2003.vtc	\
	vtc/RSA_2048_md5_2048.vtc	\
	vtc/RSA_2048_md5_241.vtc	\
	vtc/RSA_2048_md5_512.vtc	\
	vtc/RSA_2048_md5_617.vtc	\
	vtc/RSA_2048_md5_7919.vtc	\
	vtc/RSA_2048_md5_8192.vtc	\
	vtc/RSA_2048_md5_83.vtc	\
	vtc/RSA_2048_rmd160_11.vtc	\
	vtc/RSA_2048_rmd160_1283.vtc	\
	vtc/RSA_2048_rmd160_2003.vtc	\
	vtc/RSA_2048_rmd160_2048.vtc	\
	vtc/RSA_2048_rmd160_241.vtc	\
	vtc/RSA_2048_rmd160_512.vtc	\
	vtc/RSA_2048_rmd160_617.vtc	\
	vtc/RSA_2048_rmd160_7919.vtc	\
	vtc/RSA_2048_rmd160_8192.vtc	\
	vtc/RSA_2048_rmd160_83.vtc	\
	vtc/RSA_2048_sha1_11.vtc	\
	vtc/RSA_2048_sha1_1283.vtc	\
	vtc/RSA_2048_sha1_2003.vtc	\
	vtc/RSA_2048_sha1_2048.vtc	\
	vtc/RSA_2048_sha1_241.vtc	\
	vtc/RSA_2048_sha1_512.vtc	\
	vtc/RSA_2048_sha1_617.vtc	\
	vtc/RSA_2048_sha1_7919.vtc	\
	vtc/RSA_2048_sha1_8192.vtc	\
	vtc/RSA_2048_sha1_83.vtc	\
	vtc/RSA_2048_sha224_11.vtc	\
	vtc/RSA_2048_sha224_1283.vtc	\
	vtc/RSA_2048_sha224_2003.vtc	\
	vtc/RSA_2048_sha224_2048.vtc	\
	vtc/RSA_2048_sha224_241.vtc	\
	vtc/RSA_2048_sha224_512.vtc	\
	vtc/RSA_2048_sha224_617.vtc	\
	vtc/RSA_2048_sha224_7919.vtc	\
	vtc/RSA_2048_sha224_8192.vtc	\
	vtc/RSA_2048_sha224_83.vtc	\
	vtc/RSA_2048_sha256_11.vtc	\
	vtc/RSA_2048_sha256_1283.vtc	\
	vtc/RSA_2048_sha256_2003.vtc	\
	vtc/RSA_2048_sha256_2048.vtc	\
	vtc/RSA_2048_sha256_241.vtc	\
	vtc/RSA_2048_sha256_512.vtc	\
	vtc/RSA_2048_sha256_617.vtc	\
	vtc/RSA_2048_sha256_7919.vtc	\
	vtc/RSA_2048_sha256_8192.vtc	\
	vtc/RSA_2048_sha256_83.vtc	\
	vtc/RSA_2048_sha384_11.vtc	\
	vtc/RSA_2048_sha384_1283.vtc	\
	vtc/RSA_2048_sha384_2003.vtc	\
	vtc/RSA_2048_sha384_2048.vtc	\
	vtc/RSA_2048_sha384_241.vtc	\
	vtc/RSA_2048_sha384_512.vtc	\
	vtc/RSA_2048_sha384_617.vtc	\
	vtc/RSA_2048_sha384_7919.vtc	\
	vtc/RSA_2048_sha384_8192.vtc	\
	vtc/RSA_2048_sha384_83.vtc	\
	vtc/RSA_2048_sha512_11.vtc	\
	vtc/RSA_2048_sha512_1283.vtc	\
	vtc/RSA_2048_sha512_2003.vtc	\
	vtc/RSA_2048_sha512_2048.vtc	\
	vtc/RSA_2048_sha512_241.vtc	\
	vtc/RSA_2048_sha512_512.vtc	\
	vtc/RSA_2048_sha512_617.vtc	\
	vtc/RSA_2048_sha512_7919.vtc	\
	vtc/RSA_2048_sha512_8192.vtc	\
	vtc/RSA_2048_sha512_83.vtc	\
	vtc/RSA_3072_md4_11.vtc	\
	vtc/RSA_3072_md4_1283.vtc	\
	vtc/RSA_3072_md4_2003.vtc	\
	vtc/RSA_3072_md4_2048.vtc	\
	vtc/RSA_3072_md4_241.vtc	\
	vtc/RSA_3072_md4_512.vtc	\
	vtc/RSA_3072_md4_617.vtc	\
	vtc/RSA_3072_md4_7919.vtc	\
	vtc/RSA_3072_md4_8192.vtc	\
	vtc/RSA_3072_md4_83.vtc	\
	vtc/RSA_3072_md5_11.vtc	\
	vtc/RSA_3072_md5_1283.vtc	\
	vtc/RSA_3072_md5_2003.vtc	\
	vtc/RSA_3072_md5_2048.vtc	\
	vtc/RSA_3072_md5_241.vtc	\
	vtc/RSA_3072_md5_512.vtc	\
	vtc/RSA_3072_md5_617.vtc	\
	vtc/RSA_3072_md5_7919.vtc	\
	vtc/RSA_3072_md5_8192.vtc	\
	vtc/RSA_3072_md5_83.vtc	\
	vtc/RSA_3072_rmd160_11.vtc	\
	vtc/RSA_3072_rmd160_1283.vtc	\
	vtc/RSA_3072_rmd160_2003.vtc	\
	vtc/RSA_3072_rmd160_2048.vtc	\
	vtc/RSA_3072_rmd160_241.vtc	\
	vtc/RSA_3072_rmd160_512.vtc	\
	vtc/RSA_3072_rmd160_617.vtc	\
	vtc/RSA_3072_rmd160_7919.vtc	\
	vtc/RSA_3072_rmd160_8192.vtc	\
	vtc/RSA_3072_rmd160_83.vtc	\
	vtc/RSA_3072_sha1_11.vtc	\
	vtc/RSA_3072_sha1_1283.vtc	\
	vtc/RSA_3072_sha1_2003.vtc	\
	vtc/RSA_3072_sha1_2048.vtc	\
	vtc/RSA_3072_sha1_241.vtc	\
	vtc/RSA_3072_sha1_512.vtc	\
	vtc/RSA_3072_sha1_617.vtc	\
	vtc/RSA_3072_sha1_7919.vtc	\
	vtc/RSA_3072_sha1_8192.vtc	\
	vtc/RSA_3072_sha1_83.vtc	\
	vtc/RSA_3072_sha224_11.vtc	\
	vtc/RSA_3072_sha224_1283.vtc	\
	vtc/RSA_3072_sha224_2003.vtc	\
	vtc/RSA_3072_sha224_2048.vtc	\
	vtc/RSA_3072_sha224_241.vtc	\
	vtc/RSA_3072_sha224_512.vtc	\
	vtc/RSA_3072_sha224_617.vtc	\
	vtc/RSA_3072_sha224_7919.vtc	\
	vtc/RSA_3072_sha224_8192.vtc	\
	vtc/RSA_3072_sha224_83.vtc	\
	vtc/RSA_3072_sha256_11.vtc	\
	vtc/RSA_3072_sha256_1283.vtc	\
	vtc/RSA_3072_sha256_2003.vtc	\
	vtc/RSA_3072_sha256_2048.vtc	\
	vtc/RSA_3072_sha256_241.vtc	\
	vtc/RSA_3072_sha256_512.vtc	\
	vtc/RSA_3072_sha256_617.vtc	\
	vtc/RSA_3072_sha256_7919.vtc	\
	vtc/RSA_3072_sha256_8192.vtc	\
	vtc/RSA_3072_sha256_83.vtc	\
	vtc/RSA_3072_sha384_11.vtc	\
	vtc/RSA_3072_sha384_1283.vtc	\
	vtc/RSA_3072_sha384_2003.vtc	\
	vtc/RSA_3072_sha384_2048.vtc	\
	vtc/RSA_3072_sha384_241.vtc	\
	vtc/RSA_3072_sha384_512.vtc	\
	vtc/RSA_3072_sha384_617.vtc	\
	vtc/RSA_3072_sha384_7919.vtc	\
	vtc/RSA_3072_sha384_8192.vtc	\
	vtc/RSA_3072_sha384_83.vtc	\
	vtc/RSA_3072_sha512_11.vtc	\
	vtc/RSA_3072_sha512_1283.vtc	\
	vtc/RSA_3072_sha512_2003.vtc	\
	vtc/RSA_3072_sha512_2048.vtc	\
	vtc/RSA_3072_sha512_241.vtc	\
	vtc/RSA_3072_sha512_512.vtc	\
	vtc/RSA_3072_sha512_617.vtc	\
	vtc/RSA_3072_sha512_7919.vtc	\
	vtc/RSA_3072_sha512_8192.vtc	\
	vtc/RSA_3072_sha512_83.vtc	\
	vtc/RSA_4096_md4_11.vtc	\
	vtc/RSA_4096_md4_1283.vtc	\
	vtc/RSA_4096_md4_2003.vtc	\
	vtc/RSA_4096_md4_2048.vtc	\
	vtc/RSA_4096_md4_241.vtc	\
	vtc/RSA_4096_md4_512.vtc	\
	vtc/RSA_4096_md4_617.vtc	\
	vtc/RSA_4096_md4_7919.vtc	\
	vtc/RSA_4096_md4_8192.vtc	\
	vtc/RSA_4096_md4_83.vtc	\
	vtc/RSA_4096_md5_11.vtc	\
	vtc/RSA_4096_md5_1283.vtc	\
	vtc/RSA_4096_md5_2003.vtc	\
	vtc/RSA_4096_md5_2048.vtc	\
	vtc/RSA_4096_md5_241.vtc	\
	vtc/RSA_4096_md5_512.vtc	\
	vtc/RSA_4096_md5_617.vtc	\
	vtc/RSA_4096_md5_7919.vtc	\
	vtc/RSA_4096_md5_8192.vtc	\
	vtc/RSA_4096_md5_83.vtc	\
	vtc/RSA_4096_rmd160_11.vtc	\
	vtc/RSA_4096_rmd160_1283.vtc	\
	vtc/RSA_4096_rmd160_2003.vtc	\
	vtc/RSA_4096_rmd160_2048.vtc	\
	vtc/RSA_4096_rmd160_241.vtc	\
	vtc/RSA_4096_rmd160_512.vtc	\
	vtc/RSA_4096_rmd160_617.vtc	\
	vtc/RSA_4096_rmd160_7919.vtc	\
	vtc/RSA_4096_rmd160_8192.vtc	\
	vtc/RSA_4096_rmd160_83.vtc	\
	vtc/RSA_4096_sha1_11.vtc	\
	vtc/RSA_4096_sha1_1283.vtc	\
	vtc/RSA_4096_sha1_2003.vtc	\
	vtc/RSA_4096_sha1_2048.vtc	\
	vtc/RSA_4096_sha1_241.vtc	\
	vtc/RSA_4096_sha1_512.vtc	\
	vtc/RSA_4096_sha1_617.vtc	\
	vtc/RSA_4096_sha1_7919.vtc	\
	vtc/RSA_4096_sha1_8192.vtc	\
	vtc/RSA_4096_sha1_83.vtc	\
	vtc/RSA_4096_sha224_11.vtc	\
	vtc/RSA_4096_sha224_1283.vtc	\
	vtc/RSA_4096_sha224_2003.vtc	\
	vtc/RSA_4096_sha224_2048.vtc	\
	vtc/RSA_4096_sha224_241.vtc	\
	vtc/RSA_4096_sha224_512.vtc	\
	vtc/RSA_4096_sha224_617.vtc	\
	vtc/RSA_4096_sha224_7919.vtc	\
	vtc/RSA_4096_sha224_8192.vtc	\
	vtc/RSA_4096_sha224_83.vtc	\
	vtc/RSA_4096_sha256_11.vtc	\
	vtc/RSA_4096_sha256_1283.vtc	\
	vtc/RSA_4096_sha256_2003.vtc	\
	vtc/RSA_4096_sha256_2048.vtc	\
	vtc/RSA_4096_sha256_241.vtc	\
	vtc/RSA_4096_sha256_512.vtc	\
	vtc/RSA_4096_sha256_617.vtc	\
	vtc/RSA_4096_sha256_7919.vtc	\
	vtc/RSA_4096_sha256_8192.vtc	\
	vtc/RSA_4096_sha256_83.vtc	\
	vtc/RSA_4096_sha384_11.vtc	\
	vtc/RSA_4096_sha384_1283.vtc	\
	vtc/RSA_4096_sha384_2003.vtc	\
	vtc/RSA_4096_sha384_2048.vtc	\
	vtc/RSA_4096_sha384_241.vtc	\
	vtc/RSA_4096_sha384_512.vtc	\
	vtc/RSA_4096_sha384_617.vtc	\
	vtc/RSA_4096_sha384_7919.vtc	\
	vtc/RSA_4096_sha384_8192.vtc	\
	vtc/RSA_4096_sha384_83.vtc	\
	vtc/RSA_4096_sha512_11.vtc	\
	vtc/RSA_4096_sha512_1283.vtc	\
	vtc/RSA_4096_sha512_2003.vtc	\
	vtc/RSA_4096_sha512_2048.vtc	\
	vtc/RSA_4096_sha512_241.vtc	\
	vtc/RSA_4096_sha512_512.vtc	\
	vtc/RSA_4096_sha512_617.vtc	\
	vtc/RSA_4096_sha512_7919.vtc	\
	vtc/RSA_4096_sha512_8192.vtc	\
	vtc/RSA_4096_sha512_83.vtc	\
	vtc/RSA_512_md4_11.vtc	\
	vtc/RSA_512_md4_1283.vtc	\
	vtc/RSA_512_md4_2003.vtc	\
	vtc/RSA_512_md4_2048.vtc	\
	vtc/RSA_512_md4_241.vtc	\
	vtc/RSA_512_md4_512.vtc	\
	vtc/RSA_512_md4_617.vtc	\
	vtc/RSA_512_md4_7919.vtc	\
	vtc/RSA_512_md4_8192.vtc	\
	vtc/RSA_512_md4_83.vtc	\
	vtc/RSA_512_md5_11.vtc	\
	vtc/RSA_512_md5_1283.vtc	\
	vtc/RSA_512_md5_2003.vtc	\
	vtc/RSA_512_md5_2048.vtc	\
	vtc/RSA_512_md5_241.vtc	\
	vtc/RSA_512_md5_512.vtc	\
	vtc/RSA_512_md5_617.vtc	\
	vtc/RSA_512_md5_7919.vtc	\
	vtc/RSA_512_md5_8192.vtc	\
	vtc/RSA_512_md5_83.vtc	\
	vtc/RSA_512_rmd160_11.vtc	\
	vtc/RSA_512_rmd160_1283.vtc	\
	vtc/RSA_512_rmd160_2003.vtc	\
	vtc/RSA_512_rmd160_2048.vtc	\
	vtc/RSA_512_rmd160_241.vtc	\
	vtc/RSA_512_rmd160_512.vtc	\
	vtc/RSA_512_rmd160_617.vtc	\
	vtc/RSA_512_rmd160_7919.vtc	\
	vtc/RSA_512_rmd160_8192.vtc	\
	vtc/RSA_512_rmd160_83.vtc	\
	vtc/RSA_512_sha1_11.vtc	\
	vtc/RSA_512_sha1_1283.vtc	\
	vtc/RSA_512_sha1_2003.vtc	\
	vtc/RSA_512_sha1_2048.vtc	\
	vtc/RSA_512_sha1_241.vtc	\
	vtc/RSA_512_sha1_512.vtc	\
	vtc/RSA_512_sha1_617.vtc	\
	vtc/RSA_512_sha1_7919.vtc	\
	vtc/RSA_512_sha1_8192.vtc	\
	vtc/RSA_512_sha1_83.vtc	\
	vtc/RSA_512_sha224_11.vtc	\
	vtc/RSA_512_sha224_1283.vtc	\
	vtc/RSA_512_sha224_2003.vtc	\
	vtc/RSA_512_sha224_2048.vtc	\
	vtc/RSA_512_sha224_241.vtc	\
	vtc/RSA_512_sha224_512.vtc	\
	vtc/RSA_512_sha224_617.vtc	\
	vtc/RSA_512_sha224_7919.vtc	\
	vtc/RSA_512_sha224_8192.vtc	\
	vtc/RSA_512_sha224_83.vtc	\
	vtc/RSA_512_sha256_11.vtc	\
	vtc/RSA_512_sha256_1283.vtc	\
	vtc/RSA_512_sha256_2003.vtc	\
	vtc/RSA_512_sha256_2048.vtc	\
	vtc/RSA_512_sha256_241.vtc	\
	vtc/RSA_512_sha256_512.vtc	\
	vtc/RSA_512_sha256_617.vtc	\
	vtc/RSA_512_sha256_7919.vtc	\
	vtc/RSA_512_sha256_8192.vtc	\
	vtc/RSA_512_sha256_83.vtc	\
	vtc/RSA_7680_md4_11.vtc	\
	vtc/RSA_7680_md4_1283.vtc	\
	vtc/RSA_7680_md4_2003.vtc	\
	vtc/RSA_7680_md4_2048.vtc	\
	vtc/RSA_7680_md4_241.vtc	\
	vtc/RSA_7680_md4_512.vtc	\
	vtc/RSA_7680_md4_617.vtc	\
	vtc/RSA_7680_md4_7919.vtc	\
	vtc/RSA_7680_md4_8192.vtc	\
	vtc/RSA_7680_md4_83.vtc	\
	vtc/RSA_7680_md5_11.vtc	\
	vtc/RSA_7680_md5_1283.vtc	\
	vtc/RSA_7680_md5_2003.vtc	\
	vtc/RSA_7680_md5_2048.vtc	\
	vtc/RSA_7680_md5_241.vtc	\
	vtc/RSA_7680_md5_512.vtc	\
	vtc/RSA_7680_md5_617.vtc	\
	vtc/RSA_7680_md5_7919.vtc	\
	vtc/RSA_7680_md5_8192.vtc	\
	vtc/RSA_7680_md5_83.vtc	\
	vtc/RSA_7680_rmd160_11.vtc	\
	vtc/RSA_7680_rmd160_1283.vtc	\
	vtc/RSA_7680_rmd160_2003.vtc	\
	vtc/RSA_7680_rmd160_2048.vtc	\
	vtc/RSA_7680_rmd160_241.vtc	\
	vtc/RSA_7680_rmd160_512.vtc	\
	vtc/RSA_7680_rmd160_617.vtc	\
	vtc/RSA_7680_rmd160_7919.vtc	\
	vtc/RSA_7680_rmd160_8192.vtc	\
	vtc/RSA_7680_rmd160_83.vtc	\
	vtc/RSA_7680_sha1_11.vtc	\
	vtc/RSA_7680_sha1_1283.vtc	\
	vtc/RSA_7680_sha1_2003.vtc	\
	vtc/RSA_7680_sha1_2048.vtc	\
	vtc/RSA_7680_sha1_241.vtc	\
	vtc/RSA_7680_sha1_512.vtc	\
	vtc/RSA_7680_sha1_617.vtc	\
	vtc/RSA_7680_sha1_7919.vtc	\
	vtc/RSA_7680_sha1_8192.vtc	\
	vtc/RSA_7680_sha1_83.vtc	\
	vtc/RSA_7680_sha224_11.vtc	\
	vtc/RSA_7680_sha224_1283.vtc	\
	vtc/RSA_7680_sha224_2003.vtc	\
	vtc/RSA_7680_sha224_2048.vtc	\
	vtc/RSA_7680_sha224_241.vtc	\
	vtc/RSA_7680_sha224_512.vtc	\
	vtc/RSA_7680_sha224_617.vtc	\
	vtc/RSA_7680_sha224_7919.vtc	\
	vtc/RSA_7680_sha224_8192.vtc	\
	vtc/RSA_7680_sha224_83.vtc	\
	vtc/RSA_7680_sha256_11.vtc	\
	vtc/RSA_7680_sha256_1283.vtc	\
	vtc/RSA_7680_sha256_2003.vtc	\
	vtc/RSA_7680_sha256_2048.vtc	\
	vtc/RSA_7680_sha256_241.vtc	\
	vtc/RSA_7680_sha256_512.vtc	\
	vtc/RSA_7680_sha256_617.vtc	\
	vtc/RSA_7680_sha256_7919.vtc	\
	vtc/RSA_7680_sha256_8192.vtc	\
	vtc/RSA_7680_sha256_83.vtc	\
	vtc/RSA_7680_sha384_11.vtc	\
	vtc/RSA_7680_sha384_1283.vtc	\
	vtc/RSA_7680_sha384_2003.vtc	\
	vtc/RSA_7680_sha384_2048.vtc	\
	vtc/RSA_7680_sha384_241.vtc	\
	vtc/RSA_7680_sha384_512.vtc	\
	vtc/RSA_7680_sha384_617.vtc	\
	vtc/RSA_7680_sha384_7919.vtc	\
	vtc/RSA_7680_sha384_8192.vtc	\
	vtc/RSA_7680_sha384_83.vtc	\
	vtc/RSA_7680_sha512_11.vtc	\
	vtc/RSA_7680_sha512_1283.vtc	\
	vtc/RSA_7680_sha512_2003.vtc	\
	vtc/RSA_7680_sha512_2048.vtc	\
	vtc/RSA_7680_sha512_241.vtc	\
	vtc/RSA_7680_sha512_512.vtc	\
	vtc/RSA_7680_sha512_617.vtc	\
	vtc/RSA_7680_sha512_7919.vtc	\
	vtc/RSA_7680_sha512_8192.vtc	\
	vtc/RSA_7680_sha512_83.vtc

BUILT_SOURCES = $(BUILT_TESTS)

TESTS = vtc/jwt.vtc	\
	$(BUILT_TESTS)
